Update maven native-image configuration for google-java-format
PiperOrigin-RevId: 607835047